# LonelyLittleMeowSounds

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  start.dev.sh  start.prod.sh  start.sh
api/: main.py  main_prod.py
api/tests/: test_main.py
dockers/: .env  Dockerfile.dev  Dockerfile.prod  Dockerfile.test  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml
docs/docs/source/: conf.py  usage.rst
lolimeowss/: __init__.py  logging_llmeowss.py  main.py
tests/: test_llmeowsschunks_chunk.py  test_llmeowsschunks_content.py  test_llmeowsschunks_file.py  test_llmeowsschunks_init.py  test_llmeowsschunks_model.py
